--- a/src/App.css
+++ b/src/App.css
@@ -3,27 +3,41 @@
 }
 
 .App-header {
-  min-height: 100vh;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  background-image: url('/assets/header.svg');
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: 100% 50%;
 }
 
 .App-navbar {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+
   width: 100%;
+  height: 10vh;
 }
 
 .App-navbar,
-.App-project-card {
-  margin-bottom: 4rem;
+.App-project-card,
+.App-section-heading {
+  padding: 0 0 4rem 0;
 }
 
 .App-header,
 .App-projects-list {
-  margin: 0 4rem;
+  padding: 0 4rem;
+}
+
+.App-projects-list {
+  padding-top: 4rem;
+  background-color: #282c34;
+  color: white;
+  height: 100%;
 }
 
 .App-nav {
@@ -38,8 +52,15 @@
 }
 
 .App-link {
-  color: #09d3ac;
+  color: inherit;
   text-decoration: none;
+  padding-bottom: 0.25rem;
+}
+
+.App-link:hover {
+  color: #09d3ac;
+  border-bottom: 2px solid #09d3ac;
+  transition: color 0.5s;
 }
 
 .App-project-card {
@@ -47,25 +68,84 @@
   flex-direction: row;
   width: 100%;
 }
+.App-project-card:nth-child(odd) {
+  flex-direction: row-reverse;
+}
 
-.App-project-card--text,
+.App-project-card--text {
+  width: 40%;
+}
 .App-project-card--item {
-  width: 50%;
-  max-height: 572px;
+  width: 60%;
+
   margin: 0;
 }
-.App-project-card--item {
-  margin-left: 2rem;
-}
+
 .App-project-card--text {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-right: 2rem;
+  margin-right: 4rem;
 }
-
+.App-project-card:nth-child(odd) .App-project-card--text {
+  margin: 0 0 0 4rem;
+}
 .App-project-card--image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.App-header--content {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+}
+
+.App-header--text {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.App-header-arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding-bottom: 4rem;
+}
+
+@media screen and (max-width: 1160px) {
+  .App-project-card,
+  .App-project-card:nth-child(odd) {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 4rem;
+  }
+
+  .App-project-card--text,
+  .App-project-card--item,
+  .App-project-card:nth-child(odd) .App-project-card--text {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .App-header {
+    background-image: none;
+  }
+  .App-header--text {
+    width: 100%;
+  }
+  .App-header--text > h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
+  }
 }
