--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ code {
 }
 
 h1 {
+  color: #9b51e0;
   font-size: 4rem;
 }
 h1,
@@ -27,5 +28,5 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 1rem 0;
+  margin: 0;
 }
