--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  width: 100%;
-}
-
 .App-header {
   min-height: 70vh;
   display: flex;
@@ -17,6 +13,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
 
   width: 100%;
   height: 10vh;
@@ -115,6 +112,10 @@
   padding-bottom: 4rem;
 }
 
+/*====================================
+/* * # MEDIA QUERIES
+====================================*/
+
 @media screen and (max-width: 1160px) {
   .App-project-card,
   .App-project-card:nth-child(odd) {
@@ -130,6 +131,11 @@
     margin: 0;
   }
 }
+@media screen and (max-width: 960px) {
+  .App-header--text > h1 {
+    font-size: 2rem;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .App-header {
@@ -137,9 +143,6 @@
   }
   .App-header--text {
     width: 100%;
-  }
-  .App-header--text > h1 {
-    font-size: 2rem;
   }
 }
 
