--- a/src/Components/Circle/circle.css
+++ b/src/Components/Circle/circle.css
@@ -12,4 +12,43 @@
   background-size: 50% 50%;
   background-position: 0% 0%, 0% 100%, 100% 0%, 100% 100%;
   background-repeat: no-repeat;
+  animation: spin 3000ms linear infinite;
+  -webkit-animation: spin 3000ms linear infinite;
+  -moz-animation: spin 3000ms linear infinite;
+}
+
+/*==============
+/* * #Animations
+====================================*/
+@-ms-keyframes spin {
+  from {
+    -ms-transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(359deg);
+  }
+}
+@-moz-keyframes spin {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+  to {
+    -moz-transform: rotate(359deg);
+  }
+}
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+  }
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
