--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-image: url('/header.svg');
+  background-image: url('https://imgur.com/dVFsaKI.png');
   background-size: auto;
   background-repeat: no-repeat;
   background-position: 100% 50%;
