--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -120,7 +120,9 @@ blockquote {
 
   padding-bottom: 4rem;
 }
-
+li > a.HomePage-link {
+  text-decoration: none;
+}
 /*====================================
 /* * # MEDIA QUERIES
 ====================================*/
