--- a/src/Pages/PlantLife/PlantLife.css
+++ b/src/Pages/PlantLife/PlantLife.css
@@ -7,10 +7,14 @@
   font-family: 'Young Serif';
   src: url(./assets/youngserif.woff), url(./assets/youngserif.woff2);
 }
-p {
-  margin: 0;
-}
-body {
+
+main.PL-main {
+  position: relative;
+  z-index: 1;
+  background-color: #fff;
+  min-height: 100vh;
+
+  transition: transform 0.5s;
   overflow: hidden;
   font-family: 'IBM Plex Mono';
   font-size: 16px;
@@ -19,19 +23,11 @@ body {
   background-color: #fff;
   color: #2a2a2a;
 }
-
-main {
-  position: relative;
-  z-index: 1;
-  background-color: #fff;
-  min-height: 100vh;
-
-  transition: transform 0.5s;
-}
-main.open {
+main.PL-main.open {
   transform: translate(240px, 0);
 }
 
 p.toggle-nav {
   cursor: pointer;
+  margin: 0;
 }
