--- a/src/Pages/PlantLife/components/Home/PlantLife-Home.css
+++ b/src/Pages/PlantLife/components/Home/PlantLife-Home.css
@@ -2,4 +2,32 @@ section.PL-home {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh;
+}
+
+section.PL-home div {
+  width: 350px;
+}
+
+section.PL-home div.PL-home--content {
+  margin: 0 0 0 60px;
+}
+
+div.PL-home--content > h1 {
+  font-family: 'Young Serif';
+  font-size: 48px;
+  line-height: 1.2;
+}
+
+div.PL-home--content > p {
+  margin: 1.2rem 0 1.2rem 0;
+}
+
+a.PL-button {
+  display: inline-block;
+  background-color: #00b98d;
+  color: #fff;
+  text-decoration: none;
+  padding: 0.75rem 1rem;
+  border-radius: 0.25rem;
 }
