Add fade class to the PlantLife Page. Plant Life course complete -- must add ice-box features

--- a/src/Pages/PlantLife/PlantLife.css
+++ b/src/Pages/PlantLife/PlantLife.css
@@ -46,3 +46,15 @@ p.PL-toggle-nav img {
   margin-right: 1rem;
   vertical-align: -15%;
 }
+.fade {
+  animation: fade 1s;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
