--- a/src/Pages/PlantLife/components/Home/PlantLife-Home.css
+++ b/src/Pages/PlantLife/components/Home/PlantLife-Home.css
@@ -44,15 +44,21 @@ a.PL-button {
 div.PL-home--slides {
   height: 475px;
   position: relative;
+  padding: 0 2rem;
+  cursor: pointer;
 }
 
 div.PL-home--slides img {
   position: absolute;
   top: 0;
   left: 0;
-  transition: transform 0.5s;
+  transition: transform 0.5s, box-shadow 0.5s;
 }
 
 div.PL-home--slides img:first-child {
   z-index: 1;
+}
+
+div.PL-home--slides:hover img {
+  box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.1);
 }
