--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -40,6 +40,7 @@ code {
   background-size: auto;
   background-repeat: no-repeat;
   background-position: 100% 50%;
+  margin-top: 2rem;
 }
 
 .HomePage-navbar {
