--- a/src/Pages/TypeChecker/components/ControlPanel/ControlPanel.css
+++ b/src/Pages/TypeChecker/components/ControlPanel/ControlPanel.css
@@ -17,11 +17,11 @@ div.option {
 
 label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 0.5rem;
 }
 
 input[type='text'] {
-  padding: 0.5rem;
+  padding: 0.65rem;
   width: 100%;
   background-color: #575757;
   border: none;
