--- a/src/Pages/TypeChecker/TypeChecker.css
+++ b/src/Pages/TypeChecker/TypeChecker.css
@@ -26,13 +26,11 @@ div.type-checker {
   font-family: 'Faune', Helvetica, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  width: 100%;
-  position: absolute;
-  background-color: #2a2a2a;
-  margin: 0;
+
   color: #fff;
-  height: 100vh;
-  margin: 0 0 0 17.5rem;
+  background-color: #2a2a2a;
+  display: grid;
+  grid-template-columns: 280px 1fr;
 }
 
 div.type-checker > section {
