--- a/src/Pages/TypeChecker/components/Output/Output.css
+++ b/src/Pages/TypeChecker/components/Output/Output.css
@@ -1,9 +1,31 @@
+@font-face {
+  font-family: 'Faune';
+  font-weight: 400;
+  src: url('../../assets/faune-regular.woff'),
+    url('../../assets/faune-regular.woff2');
+}
+
+@font-face {
+  font-family: 'Faune';
+  font-weight: 400;
+  font-style: italic;
+  src: url('../../assets/faune-italic.woff'),
+    url('../../assets/faune-italic.woff2');
+}
+
+@font-face {
+  font-family: 'Faune';
+  font-weight: 700;
+  src: url('../../assets/faune-bold.woff'), url('../../assets/faune-bold.woff2');
+}
+
 section.text-output--wrapper {
   grid-column-start: 2;
   width: 100%;
 }
 
 textarea.text-output {
+  font-family: 'Faune', Helvetica, sans-serif;
   font-size: 4rem;
   width: 100%;
   background: none;
