--- a/src/Pages/TypeChecker/components/ControlPanel/ControlPanel.css
+++ b/src/Pages/TypeChecker/components/ControlPanel/ControlPanel.css
@@ -52,14 +52,21 @@ div.control:nth-of-type(6) {
 
 div.control > div.colors {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-div.colors p {
+div.colors button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 2rem;
   height: 2rem;
-  line-height: 1.625rem;
-  text-align: center;
-  margin: 0 8px 0 0;
+  margin: 0.5rem 0.5rem 0 0;
   border-radius: 50%;
   border: 2px solid #444;
+}
+
+div.colors button.selected {
+  border: 2px solid #fff;
 }
