Update: Add icebox.html for new features and wip style, update HomePage.css with padding and flexbox styles for the navigation on mobile screens, update body text and ./data text

--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -199,7 +199,12 @@ div.back > a.HomePage-link {
 
 @media screen and (max-width: 579px) {
   .HomePage-header {
-    padding: 0 2rem;
+    padding: 2rem 2rem;
+  }
+  .HomePage-nav li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .HomePage-projects-list {
