--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,16 @@ blockquote > p {
 .back {
   margin-top: 5rem;
 }
+
+.fade {
+  animation: fade 1s;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
