--- a/src/Pages/JennaBuchholz/components/ProgressBar/ProgressBar.css
+++ b/src/Pages/JennaBuchholz/components/ProgressBar/ProgressBar.css
@@ -6,6 +6,7 @@ div.progress {
   height: 10px;
   z-index: 1;
   background-color: #333333;
+  transition: background-color 0.5s;
 }
 
 div.progress.white {
